--- a/package.json
+++ b/package.json
@@ -42,6 +42,11 @@
     "@angular/platform-browser-dynamic": "12.0.0",
     "@angular/platform-server": "12.0.0",
     "@angular/router": "12.0.0",
+    "@ngrx/component-store": "^12.0.0",
+    "@ngrx/effects": "^12.0.0",
+    "@ngrx/entity": "^12.0.0",
+    "@ngrx/router-store": "^12.0.0",
+    "@ngrx/store": "^12.0.0",
     "@nguniversal/express-engine": "12.0.0",
     "@nrwl/angular": "12.3.5",
     "express": "^4.15.2",
@@ -57,6 +62,8 @@
     "@angular/cli": "12.0.0",
     "@angular/compiler-cli": "12.0.0",
     "@angular/language-service": "12.0.0",
+    "@ngrx/schematics": "^12.0.0",
+    "@ngrx/store-devtools": "^12.0.0",
     "@nguniversal/builders": "^12.0.0",
     "@nrwl/cli": "12.3.5",
     "@nrwl/cypress": "12.3.5",
