--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@nrwl/eslint-plugin-nx": "12.3.5",
     "@nrwl/jest": "12.3.5",
     "@nrwl/linter": "12.3.5",
+    "@nrwl/storybook": "^12.9.0",
     "@nrwl/tao": "12.3.5",
     "@nrwl/workspace": "12.3.5",
     "@types/express": "^4.17.0",
