--- a/package.json
+++ b/package.json
@@ -73,6 +73,10 @@
     "@nrwl/storybook": "^12.9.0",
     "@nrwl/tao": "12.3.5",
     "@nrwl/workspace": "12.3.5",
+    "@storybook/addon-essentials": "~6.3.0",
+    "@storybook/angular": "~6.3.0",
+    "@storybook/builder-webpack5": "~6.3.0",
+    "@storybook/manager-webpack5": "~6.3.0",
     "@types/express": "^4.17.0",
     "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
