--- a/package.json
+++ b/package.json
@@ -33,66 +33,66 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "12.0.0",
-    "@angular/common": "12.0.0",
-    "@angular/compiler": "12.0.0",
-    "@angular/core": "12.0.0",
-    "@angular/forms": "12.0.0",
-    "@angular/platform-browser": "12.0.0",
-    "@angular/platform-browser-dynamic": "12.0.0",
-    "@angular/platform-server": "12.0.0",
-    "@angular/router": "12.0.0",
-    "@ngrx/component-store": "^12.0.0",
-    "@ngrx/effects": "^12.0.0",
-    "@ngrx/entity": "^12.0.0",
-    "@ngrx/router-store": "^12.0.0",
-    "@ngrx/store": "^12.0.0",
-    "@nguniversal/express-engine": "12.0.0",
-    "@nrwl/angular": "12.3.5",
-    "express": "^4.15.2",
+    "@angular/animations": "12.2.7",
+    "@angular/common": "12.2.7",
+    "@angular/compiler": "12.2.7",
+    "@angular/core": "12.2.7",
+    "@angular/forms": "12.2.7",
+    "@angular/platform-browser": "12.2.7",
+    "@angular/platform-browser-dynamic": "12.2.7",
+    "@angular/platform-server": "12.2.7",
+    "@angular/router": "12.2.7",
+    "@ngrx/component-store": "^12.4.0",
+    "@ngrx/effects": "^12.4.0",
+    "@ngrx/entity": "^12.4.0",
+    "@ngrx/router-store": "^12.4.0",
+    "@ngrx/store": "^12.4.0",
+    "@nguniversal/express-engine": "12.1.0",
+    "@nrwl/angular": "12.9.0",
+    "express": "^4.17.1",
     "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
+    "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "12.0.0",
-    "@angular-eslint/eslint-plugin": "~12.0.0",
-    "@angular-eslint/eslint-plugin-template": "~12.0.0",
-    "@angular-eslint/template-parser": "~12.0.0",
-    "@angular/cli": "12.0.0",
-    "@angular/compiler-cli": "12.0.0",
-    "@angular/language-service": "12.0.0",
-    "@ngrx/schematics": "^12.0.0",
-    "@ngrx/store-devtools": "^12.0.0",
-    "@nguniversal/builders": "^12.0.0",
-    "@nrwl/cli": "12.3.5",
-    "@nrwl/cypress": "12.3.5",
-    "@nrwl/eslint-plugin-nx": "12.3.5",
-    "@nrwl/jest": "12.3.5",
-    "@nrwl/linter": "12.3.5",
+    "@angular-devkit/build-angular": "12.2.7",
+    "@angular-eslint/eslint-plugin": "~12.5.0",
+    "@angular-eslint/eslint-plugin-template": "~12.5.0",
+    "@angular-eslint/template-parser": "~12.5.0",
+    "@angular/cli": "12.2.7",
+    "@angular/compiler-cli": "12.2.7",
+    "@angular/language-service": "12.2.7",
+    "@ngrx/schematics": "^12.4.0",
+    "@ngrx/store-devtools": "^12.4.0",
+    "@nguniversal/builders": "^12.1.0",
+    "@nrwl/cli": "12.9.0",
+    "@nrwl/cypress": "12.9.0",
+    "@nrwl/eslint-plugin-nx": "12.9.0",
+    "@nrwl/jest": "12.9.0",
+    "@nrwl/linter": "12.9.0",
     "@nrwl/storybook": "^12.9.0",
-    "@nrwl/tao": "12.3.5",
-    "@nrwl/workspace": "12.3.5",
-    "@storybook/addon-essentials": "~6.3.0",
-    "@storybook/angular": "~6.3.0",
-    "@storybook/builder-webpack5": "~6.3.0",
-    "@storybook/manager-webpack5": "~6.3.0",
-    "@types/express": "^4.17.0",
-    "@types/jest": "26.0.8",
+    "@nrwl/tao": "12.9.0",
+    "@nrwl/workspace": "12.9.0",
+    "@storybook/addon-essentials": "~6.3.8",
+    "@storybook/angular": "~6.3.8",
+    "@storybook/builder-webpack5": "~6.3.8",
+    "@storybook/manager-webpack5": "~6.3.8",
+    "@types/express": "^4.17.13",
+    "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
-    "@typescript-eslint/eslint-plugin": "4.19.0",
-    "@typescript-eslint/parser": "4.19.0",
-    "cypress": "^7.3.0",
-    "dotenv": "8.2.0",
-    "eslint": "7.22.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-cypress": "^2.10.3",
-    "jest": "26.2.2",
-    "jest-preset-angular": "8.4.0",
-    "ng-packagr": "^12.0.0",
-    "prettier": "2.2.1",
-    "ts-jest": "26.5.5",
-    "ts-node": "~9.1.1",
-    "typescript": "~4.2.4"
+    "@typescript-eslint/eslint-plugin": "4.31.2",
+    "@typescript-eslint/parser": "4.31.2",
+    "cypress": "^8.4.1",
+    "dotenv": "10.0.0",
+    "eslint": "7.32.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-cypress": "^2.12.1",
+    "jest": "27.2.1",
+    "jest-preset-angular": "10.0.0",
+    "ng-packagr": "^12.2.2",
+    "prettier": "2.4.1",
+    "ts-jest": "27.0.5",
+    "ts-node": "~10.2.1",
+    "typescript": "4.3.5"
   }
 }
