--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@angular/cli": "12.2.7",
     "@angular/compiler-cli": "12.2.7",
     "@angular/language-service": "12.2.7",
+    "@ngneat/tailwind": "^7.0.3",
     "@ngrx/schematics": "^12.4.0",
     "@ngrx/store-devtools": "^12.4.0",
     "@nguniversal/builders": "^12.1.0",
@@ -91,6 +92,7 @@
     "jest-preset-angular": "10.0.0",
     "ng-packagr": "^12.2.2",
     "prettier": "2.4.1",
+    "tailwindcss": "2.2.16",
     "ts-jest": "27.0.5",
     "ts-node": "~10.2.1",
     "typescript": "4.3.5"
